--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@fluentui/react-components": "^9.51.1",
     "@fluentui/react-icons": "^2.0.240",
     "@microsoft/teams-js": "^2.23.0",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
